overflow corrections

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position-y: 3.5%;
-  position: fixed;
+  
   
   
   overflow-x: hidden;
@@ -40,7 +40,7 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position-y: 19%;
-  position: fixed;
+  
   
 
 }
